[gd_scene load_steps=12 format=3 uid="uid://dq65csdtmmxpg"]

[ext_resource type="Script" path="res://Scripts/players_bedroom.gd" id="1_d226b"]
[ext_resource type="Texture2D" uid="uid://ca3karudjt3kj" path="res://Assets/Player_bedroom/Player_Bedroom_Morning.png" id="1_hk1kx"]
[ext_resource type="Script" path="res://Scripts/Options_Toggle_Bedroom.gd" id="3_hf5eu"]
[ext_resource type="Texture2D" uid="uid://bbturb4ipb1gl" path="res://Assets/Player_bedroom/Inventory_Button_1.png" id="4_ogc7n"]
[ext_resource type="Script" path="res://Scripts/Menus_Scripts/Skill_Button.gd" id="5_fp83u"]
[ext_resource type="Texture2D" uid="uid://bw64m385urkbd" path="res://Assets/Player_bedroom/Inventory_Button_2.png" id="5_ipb21"]
[ext_resource type="Texture2D" uid="uid://bcs1cok0ly0u6" path="res://Assets/Player_bedroom/Inventory_Button_3.png" id="6_nb2sl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sm4e1"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clun8"]
bg_color = Color(1, 0.127268, 0.24005, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_67s7w"]
bg_color = Color(0.305318, 0.598754, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rwe88"]
bg_color = Color(0.650045, 0.000170864, 0.601295, 1)

[node name="Players_Bedroom" type="Node2D"]
script = ExtResource("1_d226b")

[node name="Bedroom_Bg" type="Sprite2D" parent="."]
position = Vector2(579, 326)
scale = Vector2(0.66875, 0.769444)
texture = ExtResource("1_hk1kx")

[node name="Options_holder" type="ColorRect" parent="."]
offset_right = 200.0
offset_bottom = 700.0
color = Color(0.114897, 0.114897, 0.114897, 1)

[node name="Option_button_1" type="Button" parent="Options_holder"]
modulate = Color(0.848727, 0.471042, 0.0524029, 1)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 185.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 25
text = "Rest"

[node name="Option_button_2" type="Button" parent="Options_holder"]
modulate = Color(0.848727, 0.471042, 0.0524029, 1)
layout_mode = 0
offset_left = 10.0
offset_top = 75.0
offset_right = 185.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 25
text = "Push Up"

[node name="Option_button_3" type="Button" parent="Options_holder"]
modulate = Color(0.848727, 0.471042, 0.0524029, 1)
layout_mode = 0
offset_left = 10.0
offset_top = 140.0
offset_right = 185.0
offset_bottom = 197.0
theme_override_font_sizes/font_size = 25
text = "Go for a Run"

[node name="Option_button_4" type="Button" parent="Options_holder"]
modulate = Color(0.848727, 0.471042, 0.0524029, 1)
layout_mode = 0
offset_left = 10.0
offset_top = 205.0
offset_right = 185.0
offset_bottom = 262.0
theme_override_font_sizes/font_size = 25
text = "Study"

[node name="Option_button_5" type="Button" parent="Options_holder"]
modulate = Color(0.848727, 0.471042, 0.0524029, 1)
layout_mode = 0
offset_left = 10.0
offset_top = 335.0
offset_right = 185.0
offset_bottom = 392.0
theme_override_font_sizes/font_size = 25
text = "Creation"

[node name="Option_button_6" type="Button" parent="Options_holder"]
modulate = Color(0.848727, 0.471042, 0.0524029, 1)
layout_mode = 0
offset_left = 10.0
offset_top = 270.0
offset_right = 185.0
offset_bottom = 327.0
theme_override_font_sizes/font_size = 25
text = "Squat"

[node name="HealthBar" type="ProgressBar" parent="Options_holder"]
layout_mode = 0
offset_left = 6.0
offset_top = 514.0
offset_right = 189.0
offset_bottom = 541.0
theme_override_styles/background = SubResource("StyleBoxFlat_sm4e1")
theme_override_styles/fill = SubResource("StyleBoxFlat_clun8")
value = 50.0
show_percentage = false

[node name="HPTXTLabel" type="RichTextLabel" parent="Options_holder/HealthBar"]
layout_mode = 0
offset_right = 181.0
offset_bottom = 27.0
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "Hp/MaxHp"

[node name="ManaBar" type="ProgressBar" parent="Options_holder"]
layout_mode = 0
offset_left = 6.0
offset_top = 550.0
offset_right = 189.0
offset_bottom = 577.0
theme_override_styles/background = SubResource("StyleBoxFlat_sm4e1")
theme_override_styles/fill = SubResource("StyleBoxFlat_67s7w")
value = 50.0
show_percentage = false

[node name="MPTXTLabel" type="RichTextLabel" parent="Options_holder/ManaBar"]
layout_mode = 0
offset_right = 181.0
offset_bottom = 27.0
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "Hp/MaxHp"

[node name="ENBar" type="ProgressBar" parent="Options_holder"]
layout_mode = 0
offset_left = 6.0
offset_top = 585.0
offset_right = 189.0
offset_bottom = 612.0
theme_override_styles/background = SubResource("StyleBoxFlat_sm4e1")
theme_override_styles/fill = SubResource("StyleBoxFlat_rwe88")
value = 50.0
show_percentage = false

[node name="ENTXTLabel" type="RichTextLabel" parent="Options_holder/ENBar"]
layout_mode = 0
offset_right = 181.0
offset_bottom = 27.0
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "Hp/MaxHp"

[node name="Options_Toggle" type="Button" parent="."]
offset_left = 200.0
offset_top = 200.0
offset_right = 264.0
offset_bottom = 277.0
theme_override_font_sizes/font_size = 50
text = "<"
script = ExtResource("3_hf5eu")

[node name="Inventory_Button" type="TextureButton" parent="."]
offset_left = 1052.0
offset_top = 15.0
offset_right = 1330.0
offset_bottom = 293.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("4_ogc7n")
texture_pressed = ExtResource("5_ipb21")
texture_hover = ExtResource("6_nb2sl")
script = ExtResource("5_fp83u")

[node name="Day_Text" type="RichTextLabel" parent="."]
offset_left = 845.0
offset_top = 21.0
offset_right = 1049.0
offset_bottom = 86.0
bbcode_enabled = true
text = "csdsdvsc"

[connection signal="button_up" from="Options_holder/Option_button_1" to="." method="_on_option_button_1_button_up"]
[connection signal="pressed" from="Options_holder/Option_button_2" to="." method="_on_option_button_2_pressed"]
[connection signal="pressed" from="Options_holder/Option_button_3" to="." method="_on_option_button_3_pressed"]
[connection signal="pressed" from="Options_holder/Option_button_4" to="." method="_on_option_button_4_pressed"]
[connection signal="button_up" from="Options_holder/Option_button_5" to="." method="_on_option_button_5_button_up"]
[connection signal="button_up" from="Options_holder/Option_button_6" to="." method="_on_option_button_6_button_up"]
[connection signal="button_up" from="Options_Toggle" to="Options_Toggle" method="_on_button_up"]
[connection signal="button_up" from="Inventory_Button" to="Inventory_Button" method="_on_button_up"]
